# edifact-rs

./: APERAK.json  CONTRL.json  Cargo.toml
src/: cli.rs  main.rs
src/mig/: description.rs  either.rs  error.rs  mod.rs  spec.rs
src/mig/decode/: mod.rs  value.rs
src/mig/decode/parser/: mod.rs  value.rs
src/usecase/: description.rs  mod.rs
