[package]
name = "edifact"
version = "0.1.0"
authors = ["Matthias Metzger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
combine = "4.0.1"
serde_json = "1.0"
structopt = "0.3"
itertools = "0.9.0"
encoding = "0.2"
