[package]
name = "edifact"
version = "0.1.0"
authors = ["Matthias Metzger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
combine = "4.6.6"
serde_json = "1.0"
itertools = "0.10.5"
encoding = "0.2"
clap = { version = "4.1.1", features = ["derive"] }
nom = "7.1.3"
